--- a/project/frontend/src/app/components/hero/hero.component.html
+++ b/project/frontend/src/app/components/hero/hero.component.html
@@ -2,6 +2,6 @@
   <div class="hero-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px">
     <h1 class="hero-title">Welcome to Our Event Management System</h1>
     <h2 class="hero-subtitle">Organize and attend events effortlessly</h2>
-    <button mat-raised-button color="primary">Get Started</button>
+    <button mat-raised-button color="primary" (click)="goToEvents()">Get Started</button>
   </div>
 </div>
