--- a/project/frontend/src/app/components/organization-card/organization-card.component.html
+++ b/project/frontend/src/app/components/organization-card/organization-card.component.html
@@ -3,7 +3,7 @@
   <mat-card-header>
     <mat-card-title>{{organization.name}}</mat-card-title>
     <mat-card-subtitle style="margin-bottom: 10px;">
-      Rating ({{organization.averageRating}}/5) - Events ({{organization.totalEvents}})
+      Average Rating ({{organization.averageRating === null ? 0 : organization.averageRating }}/5) - Events ({{organization.totalEvents}})
     </mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image  src={{organization.avatar}} alt={{organization.name}}>
