--- a/project/frontend/src/app/components/filter-dialog/filter-dialog.component.html
+++ b/project/frontend/src/app/components/filter-dialog/filter-dialog.component.html
@@ -4,6 +4,7 @@
     <mat-form-field>
       <mat-label>Filter by Status</mat-label>
       <mat-select [(value)]="selectedStatus">
+        <mat-option value="">All</mat-option>
         <mat-option value="upcoming">Upcoming</mat-option>
         <mat-option value="ongoing">Ongoing</mat-option>
         <mat-option value="past">Past</mat-option>
