--- a/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
+++ b/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
@@ -35,7 +35,8 @@
   <div fxLayout="row" fxLayoutGap="10px">
     <mat-form-field>
       <mat-label>Start Time</mat-label>
-      <input type="time" matInput value="{{eventForm.value.startTime}}" formControlName="startTime">
+      <!-- <input type="time" matInput value="{{eventForm.value.startTime}}" formControlName="startTime"> -->
+      <input type="time" matInput value={{eventForm.value.startTime}} formControlName="startTime">
       @if (startTime.hasError('required')) {
         <mat-error>StartTime is <strong>required</strong></mat-error>
         }
