--- a/project/frontend/src/app/components/images-uploader/images-uploader.component.css
+++ b/project/frontend/src/app/components/images-uploader/images-uploader.component.css
@@ -13,3 +13,14 @@
   padding: 5px;
   cursor: pointer;
 }
+
+
+.styled-image {
+  width: 100%;
+  height: 100%;
+  border: 2px solid #000; /* Change the color and width as needed */
+  padding: 10px; /* Adjust the padding as needed */
+  box-sizing: border-box; /* Ensure the padding is included in the element's total width and height */
+  margin: 10px;
+  border-radius: 10px;
+}
