--- a/project/frontend/src/app/components/images-uploader/images-uploader.component.html
+++ b/project/frontend/src/app/components/images-uploader/images-uploader.component.html
@@ -4,11 +4,10 @@
     <input type="file" (change)="onFileSelected($event)" multiple>
     <div *ngIf="images.length > 0">
       <mat-list>
-        <mat-list-item *ngFor="let image of images; let i = index" fxLayout="row" fxLayoutAlign="start center" (mouseenter)="showIcon = i" (mouseleave)="showIcon = null">
-          <!-- <img [src]="image.preview || image.url" alt="Image preview" width="200px" height="200px" (click)="removeImage(i)"> -->
-          <div class="image-container" >
-            <img [src]="image.preview || image.url" alt="Image preview" width="200px" height="200px" (click)="removeImage(i)">
-            <mat-icon *ngIf="showIcon === i" class="crash-icon" (click)="removeImage(i)">delete</mat-icon>
+        <mat-list-item class="styled-image" *ngFor="let image of images; let i = index" fxLayout="row" fxLayoutAlign="start center"  (mouseenter)="changeShowIcon(i)" (mouseleave)="changeShowIcon(null)">
+          <div>
+            <img [src]="image.preview || image.url" alt="Image preview"  width="200px" height="200px">
+            <mat-icon *ngIf="showIcon === i" (click)="removeImage(i)" color="accent">delete</mat-icon>
           </div>
         </mat-list-item>
       </mat-list>
